--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>explore-cali</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>explore-cali</name>
-    <description>explore-cali</description>
+    <description>Explore California Relational Database Microservice</description>
     <url/>
     <licenses>
         <license/>
@@ -58,9 +58,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.5.0</version>
+            <version>2.8.9</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
